k8s/config/ingresses/portainer-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portainer-ingress
  namespace: portainer
  annotations:
    kubernetes.io/ingress.class: public
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /portainer(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: portainer
            port:
              number: 9000
